compiler/testData/diagnostics/tests/dynamicTypes/delegationBy.kt
interface Tr {
    fun foo()
}

class C(d: <!UNSUPPORTED!>dynamic<!>) : Tr by d